force-app/main/default/objects/Account/fields/Ambiguity_Fields__c.field-meta.xml
<CustomField>
    <fullName>Ambiguity_Fields__c</fullName>
    <label>Ambiguity Fields</label>
    <type>TextArea</type>
</CustomField>