force-app/main/default/objects/Account/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <label>Balance</label>
    <summarizedField>Account_Transaction__c.Amount_Signed__c</summarizedField>
    <summaryForeignKey>Account_Transaction__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>