force-app/main/default/objects/Account/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <defaultValue>TEXT(1)</defaultValue>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phone_Country_Codes</valueSetName>
    </valueSet>
</CustomField>