force-app/main/default/objects/Account/fields/Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Create_Date__c</fullName>
    <label>Create Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>