force-app/main/default/objects/Account/fields/GoogleDriveFolderId__c.field-meta.xml
<CustomField>
    <fullName>GoogleDriveFolderId__c</fullName>
    <label>GoogleDriveFolderId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>