force-app/main/default/objects/Account/fields/Last_Created_Verification_Pin__c.field-meta.xml
<CustomField>
    <fullName>Last_Created_Verification_Pin__c</fullName>
    <label>Last Created Verification Pin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>