force-app/main/default/objects/Account/fields/Last_Created_Verification_Pin_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Created_Verification_Pin_Time__c</fullName>
    <label>Last Created Verification Pin Time</label>
    <type>DateTime</type>
</CustomField>