force-app/main/default/objects/Account/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Website Chat</fullName>
                <default>true</default>
                <label>Website Chat</label>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>