force-app/main/default/objects/Account/fields/Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Gateway</label>
    <referenceTo>Payment_Gateway__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>