force-app/main/default/objects/Account/fields/Plivo_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Plivo_Country_Code__c</fullName>
    <inlineHelpText>Entered Country Code utilized in all PMA Contacts</inlineHelpText>
    <label>Plivo Country Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>