force-app/main/default/objects/Account/fields/Plivo_PHLO_Id__c.field-meta.xml
<CustomField>
    <fullName>Plivo_PHLO_Id__c</fullName>
    <label>Plivo PHLO Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>