force-app/main/default/objects/Account/fields/Schedule_Appointment_Link__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Appointment_Link__c</fullName>
    <formula>IF( NOT(ISBLANK(UUID__c )) ,
(  $Label.GuestSiteLink + &quot;/appointment?memberuuid=&quot; + UUID__c) , &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule Appointment Link</label>
    <type>Text</type>
</CustomField>