force-app/main/default/objects/Account/fields/Subscription_Products_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Products_Catalog__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Default Subscription Catalogue Applicable to New Members</description>
    <inlineHelpText>Default Subscription Catalogue Applicable to New Members</inlineHelpText>
    <label>Subscription Products Catalog</label>
    <referenceTo>Catalog__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>