force-app/main/default/objects/Account/listViews/All_POS_Systems.listView-meta.xml
<ListView>
    <fullName>All_POS_Systems</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Plivo_Sender_Id__c</columns>
    <columns>Plivo_Country_Code__c</columns>
    <columns>Payment_Gateway__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Plivo_Sender_Id__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>All POS Systems</label>
</ListView>